--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     stdin_open: true
     volumes:
       - /mnt/user:/unraid
-      - ${NVIM_CONFIG_PATH}:/root/.config/nvim
+      - /mnt/user/docker/nvim-config:/root/.config/nvim
